--- a/示例/javaapk.com-ComAssistant/.classpath
+++ b/示例/javaapk.com-ComAssistant/.classpath
@@ -11,10 +11,11 @@
 	<classpathentry kind="lib" path="libs/event.jar"/>
 	<classpathentry kind="lib" path="libs/linq4j.jar"/>
 	<classpathentry kind="lib" path="libs/convert.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/RXTXcomm.jar"/>
 	<classpathentry kind="con" path="org.eclipse.andmore.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.andmore.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.andmore.DEPENDENCIES"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
