--- a/示例/javaapk.com-ComAssistant/project.properties
+++ b/示例/javaapk.com-ComAssistant/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-26
-android.library.reference.1=../../hardware/Android.Hardware
+android.library.reference.1=../Android.Hardware
