--- a/Demo/javaapkcomComAssistant/src/main/AndroidManifest.xml
+++ b/Demo/javaapkcomComAssistant/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bjw.ComAssistant"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="1001"
+    android:versionName="1.1" >
 
     <uses-sdk android:minSdkVersion="10"/>
 	<!-- //内置sd卡写入权限 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <!--uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
